rename and fix spacing on footer btns

--- a/src/renderer/App.css
+++ b/src/renderer/App.css
@@ -161,7 +161,7 @@ a:hover {
     position:absolute;
     display: flex;
     justify-content: space-between;
-    top: 92vh;
+    top: 91vh;
     width: 100%;
 }
 
